Added auth steps

--- a/.github/workflows/test-auth.yml
+++ b/.github/workflows/test-auth.yml
@@ -5,6 +5,18 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/create-github-app-token@v2
+        id: app-token
+        with:
+          app-id: ${{ secrets.APP_ID }}
+          private-key: ${{ secrets.APP_PRIVATE_KEY }}
+
+      - uses: actions/checkout@v4
+        with:
+          token: ${{ steps.app-token.outputs.token }}
+          ref: ${{ github.head_ref }}
+          persist-credentials: false
+
       - name: Hello World
         run: |
           echo Hello World
